# na_glazok_bot

./: .gitignore  docker-compose.yml
cpp_bot/: CMakeLists.txt  IMPLEMENTATION.md  IMPLEMENTATION_DETAILS.md  README.md  aiservice_design.md  architecture.md  build_and_run.sh  gamelogic_design.md  gpt.curl  implementation_plan.md  imsge.curl  plan_ru.md  run_bot.sh  test_build.sh  test_image_generation.cpp  test_plan.md
cpp_bot/src/: AIService.cpp  AIService.h  GameLogic.cpp  GameLogic.h  TelegramBot.cpp  TelegramBot.h  main.cpp
python_telegram_bot/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  architecture_diagram.py  pyproject.toml  test_ai_service.py  test_ai_service_debug.py  test_bot.py  test_image_generation.py  test_menu.py  test_persistent_stats.py  test_random_illusion.py
python_telegram_bot/data/: illusion_urls.txt
python_telegram_bot/src/: main.py
python_telegram_bot/src/telegram_bot/: ai_service.py  bot.py  game_logic.py
